Fix cutoff embed due to async image loading

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -144,6 +144,7 @@ h6 {
   padding: 3px;
   img {
     width: 100%;
+    height: auto;
   }
 }
 
